# handlers/blog_imp/blog.go
@@ -2,11 +2,15 @@ package blog_imp
 
 import (
 	"github.com/bbcyyb/bunkerhill/models"
-	"github.com/bbcyyb/bunkerhill/restapi/operations"
 	"github.com/bbcyyb/bunkerhill/restapi/operations/blog"
 	"github.com/bbcyyb/bunkerhill/storage/blog_storage"
 	middleware "github.com/go-openapi/runtime/middleware"
 )
+
+/*
+Restful API 设计规范实战
+https://segmentfault.com/a/1190000007313505
+*/
 
 func GetBlog(params blog.GetBlogParams) middleware.Responder {
 	blogsSource, err := blog_storage.GetBlogAll()
@@ -15,20 +19,24 @@ func GetBlog(params blog.GetBlogParams) middleware.Responder {
 			Message: err.Error(),
 		}
 
-		apps.NewGetAPIVersionInternalServerError().WithPayload(err_payload)
+		blog.NewGetBlogInternalServerError().WithPayload(err_payload)
 	}
 
 	blogsTarget := make(models.Blogs, len(blogsSource))
 	for _, source := range blogsSource {
-		append(blogsTarget, *transfer(source))
+		blogsTarget = append(blogsTarget, transfer(source))
+	}
+	payload := &models.GetBlogOKBody{
+		Data:   blogsTarget,
+		Paging: nil,
 	}
 
-	return blog.NewGetBlogOK().WithPayload(blogsTarget)
+	return blog.NewGetBlogOK().WithPayload(payload)
 }
 
 func transfer(source blog_storage.Blog) *models.Blog {
 	result := &models.Blog{
-		ID:         source.ID,
+		ID:         source.ID.Hex(),
 		Title:      source.Title,
 		Body:       source.Body,
 		BodyHTML:   source.BodyHTML,
